# dragonfly-mle

./: .gitignore  Dockerfile  README.md
src/: CMakeLists.txt  Makefile  config.c  config.h  dragonfly-cmds.h  dragonfly-io.c  dragonfly-io.h  dragonfly-lib.c  jsonrpc-server.c  jsonrpc-server.h  main-bench.c  msgqueue.c  msgqueue.h  param.h
src/analyzer/: hello-world.lua
src/benchmark/: bench0.c  bench1.c  bench2.c  bench3.c  bench4.c  bench5.c  bench6.c  benchmark.c  benchmark.h
src/config/: config.lua
src/filter/: simple-filter.lua
src/io/: io-file.c  io-nats.c  io-nats.h  io-pipe.c  io-pipe.h  io-syslog.c  io-tail.c  io-tcp.c  io-tcp.h
src/lib/lua-cjson/: lua-cjson.c
src/lib/lua-cmsgpack/: lua_cmsgpack.c
src/lib/lua-hiredis/: lua-hiredis.c
src/lib/lua-marshal/: Makefile  lmarshal.c  lmarshal.h
src/lib/msgqueue/: msgqueue.c
src/resp/: resp-suricata.c
src/test/: test0.c  test1.c  test10.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
src/www/: alert.json  hello.json  nsm.json  output.json
test-resources/: make-4M-json.sh  one-eve-msg.txt
